# LoginSystem

./: .gitignore  data.db  password_encrypter.py  prepare_database.py  product_info.json
pyLoginSystem/: LICENSE  README.md  setup.cfg
pyLoginSystem/pyLoginSystem/: prepare_database.py
pyLoginSystem/pyLoginSystem.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
