[metadata]
name = pyLoginSystem
version = 0.0.2
author = Lewis Davies
author_email = lewisastondavies1@gmail.com
description = A simple python login system using sql alchemy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/uklewis124/LoginSystem
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.6
include_package_data = True